Correction of block names

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       />
     </div>
 
-    <main class="page__main courses">
-      <section class="courses__section">
+    <main class="page__main">
+      <section class="courses">
         <header class="courses-header">
           <div class="courses-header__titles">
             <p class="courses-header__suptitle">Enjoy your studying!</p>
