Correction of block names

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
     <main class="page__main">
       <section class="courses">
-        <header class="courses-header">
-          <div class="courses-header__titles">
-            <p class="courses-header__suptitle">Enjoy your studying!</p>
-            <h1 class="courses-header__title">Our online courses</h1>
+        <header class="courses__header">
+          <div class="courses__titles">
+            <p class="courses__suptitle">Enjoy your studying!</p>
+            <h1 class="courses__title">Our online courses</h1>
           </div>
 
-          <div class="courses-header__controls">
+          <div class="courses__controls">
             <form class="courses-search" action="#" method="get">
               <label class="courses-search__field">
                 <span class="courses-search__icon" aria-hidden="true"></span>
