Correcting search naming

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
           </div>
 
           <div class="courses__controls">
-            <form class="courses-search" action="#" method="get">
-              <label class="courses-search__field">
-                <span class="courses-search__icon" aria-hidden="true"></span>
+            <form class="search" action="#" method="get">
+              <label class="search__field">
+                <span class="search__icon" aria-hidden="true"></span>
                 <input
-                  class="courses-search__input"
+                  class="search__input"
                   type="search"
                   name="query"
                   placeholder="Search course..."
