Application of the mix (BEM)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
 
           <div class="courses__controls">
-            <form class="search" action="#" method="get">
+            <form class="courses__search search" action="#" method="get">
               <label class="search__field">
                 <span class="search__icon" aria-hidden="true"></span>
                 <input
