Correction of category filter naming

--- a/index.html
+++ b/index.html
@@ -50,65 +50,65 @@
               </label>
             </form>
 
-            <nav class="courses-tabs" aria-label="Course categories">
+            <nav class="courses__category-filter category-filter" aria-label="Category filter">
               <button
-                class="courses-tabs__item courses-tabs__item_active"
+                class="category-filter__item category-filter__item_active"
                 type="button"
                 data-category="all"
               >
-                <span class="courses-tabs__inner">
-                  <span class="courses-tabs__label">All</span>
-                  <span class="courses-tabs__count">17</span>
+                <span class="category-filter__inner">
+                  <span class="category-filter__label">All</span>
+                  <span class="category-filter__count">17</span>
                 </span>
               </button>
               <button
-                class="courses-tabs__item"
+                class="category-filter__item"
                 type="button"
                 data-category="marketing"
               >
-                <span class="courses-tabs__inner">
-                  <span class="courses-tabs__label">Marketing</span>
-                  <span class="courses-tabs__count">4</span>
+                <span class="category-filter__inner">
+                  <span class="category-filter__label">Marketing</span>
+                  <span class="category-filter__count">4</span>
                 </span>
               </button>
               <button
-                class="courses-tabs__item"
+                class="category-filter__item"
                 type="button"
                 data-category="management"
               >
-                <span class="courses-tabs__inner">
-                  <span class="courses-tabs__label">Management</span>
-                  <span class="courses-tabs__count">3</span>
+                <span class="category-filter__inner">
+                  <span class="category-filter__label">Management</span>
+                  <span class="category-filter__count">3</span>
                 </span>
               </button>
               <button
-                class="courses-tabs__item"
+                class="category-filter__item"
                 type="button"
                 data-category="hr"
               >
-                <span class="courses-tabs__inner">
-                  <span class="courses-tabs__label">HR &amp; Recruting</span>
-                  <span class="courses-tabs__count">5</span>
+                <span class="category-filter__inner">
+                  <span class="category-filter__label">HR &amp; Recruting</span>
+                  <span class="category-filter__count">5</span>
                 </span>
               </button>
               <button
-                class="courses-tabs__item"
+                class="category-filter__item"
                 type="button"
                 data-category="design"
               >
-                <span class="courses-tabs__inner">
-                  <span class="courses-tabs__label">Design</span>
-                  <span class="courses-tabs__count">2</span>
+                <span class="category-filter__inner">
+                  <span class="category-filter__label">Design</span>
+                  <span class="category-filter__count">2</span>
                 </span>
               </button>
               <button
-                class="courses-tabs__item"
+                class="category-filter__item"
                 type="button"
                 data-category="development"
               >
-                <span class="courses-tabs__inner">
-                  <span class="courses-tabs__label">Development</span>
-                  <span class="courses-tabs__count">3</span>
+                <span class="category-filter__inner">
+                  <span class="category-filter__label">Development</span>
+                  <span class="category-filter__count">3</span>
                 </span>
               </button>
             </nav>
