--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
         </header>
 
-        <div class="courses-grid" data-courses-grid>
+        <div class="courses__grid" data-courses-grid>
           <!-- Карточки будут отрисованы JS -->
           <!-- Пример первой карточки -->
           <article class="course-card" data-category="design">
