Correction of card naming

--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
         <div class="courses__grid" data-courses-grid>
           <!-- Карточки будут отрисованы JS -->
           <!-- Пример первой карточки -->
-          <article class="course-card" data-category="design">
-            <img class="course-card__image" src="./assets/course-ux.png" alt="User Experience. Human-centered Design">
-            <div class="course-card__content">
-              <span class="course-card__badge course-card__badge_theme_design">
+          <article class="courses__card card" data-category="design">
+            <img class="card__image" src="./assets/course-ux.png" alt="User Experience. Human-centered Design">
+            <div class="card__content">
+              <span class="card__badge card__badge_theme_design">
                 Design
               </span>
-              <h2 class="course-card__title">User Experience. Human-centered Design</h2>
-              <div class="course-card__info">
-                <span class="course-card__price">$240</span>
-                <span class="course-card__divider"></span>
-                <span class="course-card__author">by Cody Fisher</span>
+              <h2 class="card__title">User Experience. Human-centered Design</h2>
+              <div class="card__info">
+                <span class="card__price">$240</span>
+                <span class="card__divider"></span>
+                <span class="card__author">by Cody Fisher</span>
               </div>
             </div>
           </article>
