--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
 
           <div class="courses__controls">
-            <form class="courses__search search" action="#" method="get">
+            <form class="search" action="#" method="get">
               <label class="search__field">
                 <span class="search__icon" aria-hidden="true"></span>
                 <input
@@ -50,7 +50,7 @@
               </label>
             </form>
 
-            <nav class="courses__category-filter category-filter" aria-label="Category filter">
+            <nav class="category-filter" aria-label="Category filter">
               <button
                 class="category-filter__item category-filter__item--active"
                 type="button"
@@ -118,7 +118,7 @@
         <div class="courses__grid" data-courses-grid>
           <!-- Карточки будут отрисованы JS -->
           <!-- Пример первой карточки -->
-          <article class="courses__card card" data-category="design">
+          <article class="card" data-category="design">
             <img class="card__image" src="./assets/course-ux.png" alt="User Experience. Human-centered Design">
             <div class="card__content">
               <span class="card__badge card__badge_theme_design">
