Adding category modifiers

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <article class="card" data-category="design">
             <img class="card__image" src="./assets/course-ux.png" alt="User Experience. Human-centered Design">
             <div class="card__content">
-              <span class="card__badge card__badge_theme_design">
+              <span class="card__badge card__badge--design">
                 Design
               </span>
               <h2 class="card__title">User Experience. Human-centered Design</h2>
