Fixing background images

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body class="page">
-    <div class="page__background">
+    <div class="background">
       <img
-        class="page__background-shape page__background-shape_position_top-right"
-        src="./assets/background-shapes-top-right.svg"
+        class="background__arrows"
+        src="./assets/background-arrows.svg"
         alt=""
         aria-hidden="true"
       />
       <img
-        class="page__background-dots page__background-dots_position_top-right"
-        src="./assets/background-dots-top-right.svg"
+        class="background__dots"
+        src="./assets/background-dots.svg"
         alt=""
         aria-hidden="true"
       />
       <img
-        class="page__background-shape page__background-shape_position_bottom-left"
-        src="./assets/background-shapes-bottom-left.svg"
+        class="background__semicircles"
+        src="./assets/background-semicircles.svg"
         alt=""
         aria-hidden="true"
       />
