--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body class="page">
-    <!--div class="background">
+    <div class="background">
       <img
         class="background__arrows"
         src="./assets/background-arrows.svg"
@@ -26,7 +26,7 @@
         alt=""
         aria-hidden="true"
       />
-    </div-->
+    </div>
 
     <main class="page__main">
       <section class="courses">
